# dailybkup

./: .gitignore  .mergify.yml  .tool-versions  README.md  justfile  mise.toml  mkdocs.yml  pyproject.toml  pytest.functional.ini  pytest.ini  pytest.unit.ini  versions.json
.github/wiremock-action/: action.yml
.github/workflows/: main.yml
0.4.0/: index.html
0.4.1/: index.html
0.4.2/: index.html
0.4.3/: index.html  search.html  sitemap.xml
0.4.3/search/: search_index.json
1.0.0/: index.html
1.0.0/search/: search_index.json
1.1.0/: index.html  sitemap.xml
1.2.0/: index.html
1.2.0/search/: search_index.json
1.3.0/: index.html
1.4.0/: 404.html  index.html
1.4.0/search/: search_index.json
1.5.0/: index.html  sitemap.xml
1.5.0/search/: search_index.json
dailybkup/: __main__.py  app.py  b2utils.py  cleaner.py  compression.py  config.py  conftest.py  dailybkup.py  destinator.py  dictutils.py  encryption.py  envutils.py  fileutils.py  finisher.py  functional_test_app.py  functional_test_b2utils.py  functional_test_cleaner.py  gdrive_utils.py  gpgutils.py  injector.py  osutils.py  phases.py  runner.py  state.py  storer.py  tarutils.py  test_app.py  test_cleaner.py  test_compression.py  test_config.py  test_dailybkup.py  test_dictutils.py  test_encryption.py  test_functional_app.py  test_gdrive_utils.py  test_gpgutils.py  test_injector.py  test_runner.py  test_storer.py  test_tarutils.py  (+3 more)
dailybkup/app/: cli.py  config.py  functional_test_app.py  test_cli.py  test_config.py
dailybkup/cleaner/: __init__.py  builder.py  cleaner.py  config.py  (+4 more)
devtools/: b2client.py  gdrive_client.py  gdrive_upload.py
docs/: index.md
functional_tests/: functional_test_app.py  test_functional_app.py
latest/: search.html
scripts/: _publish-to-aws.sh  _tools.sh  docs-release.sh  docs-serve.sh  format.sh  install-deps.sh  release.sh  run.sh  test.sh  typecheck.sh  wiremock.sh
(+70 files in other folders)
