[tool.poetry]
name = "dailybkup"
version = "1.4.0"
description = ""
authors = ["Vitor Barbosa <vitorqb@gmail.com>"]
exclude = [
  "**/test_*.py",
  "**/functional_test_*.py",
  "**/testdata/**",
  "**/testutils.py",
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
PyYAML = "^6.0"
b2sdk = "^1.17.3"
requests = "^2.28.1"
google-api-python-client = {version = "^2.74.0", optional = true}
google-auth = {version = "^2.16.0", optional = true}


[tool.poetry.extras]
google-drive-storer = ["google-auth", "google-api-python-client"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
types-requests = "^2.28.11.2"
types-PyYAML = "^6.0.11"
types-setuptools = "^65.3.0"
black = "^22.10.0"
mkdocs = "^1.4.2"
mike = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
